--- a/app/src/main/res/layout/seekbar_exact.xml
+++ b/app/src/main/res/layout/seekbar_exact.xml
@@ -3,19 +3,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="70dp">
+    android:layout_height="140dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/MusicPlay"
+        app:layout_constraintTop_toTopOf="parent"
 
         >
+
         <ProgressBar
             android:id="@+id/MusicLine"
             style="@android:style/Widget.ProgressBar.Horizontal"
@@ -25,61 +26,64 @@
             android:max="100"
             android:maxHeight="2dp"
             android:progress="30"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
             android:progressDrawable="@drawable/progressbar_color"
-            />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/StartTime"
-            android:text="00:13"
-            android:layout_margin="5dp"
-            android:textSize="12sp"
-            app:layout_constraintBottom_toTopOf="@id/MusicLine"
-            app:layout_constraintStart_toStartOf="parent"
-            />
-        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/EndTime"
-            android:text="00:30"
             android:layout_margin="5dp"
+            android:text="00:13"
             android:textSize="12sp"
             app:layout_constraintBottom_toTopOf="@id/MusicLine"
-            app:layout_constraintEnd_toEndOf="parent"
-            />
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/EndTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:text="00:30"
+            android:textSize="12sp"
+            app:layout_constraintBottom_toTopOf="@id/MusicLine"
+            app:layout_constraintEnd_toEndOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/MusicPlay"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_marginStart="20dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:outlineAmbientShadowColor="#CC0C4EFB"
+        android:outlineSpotShadowColor="#CC1751EA"
+        app:cardCornerRadius="20dp"
+        app:cardElevation="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:cardCornerRadius="20dp"
-        android:id="@+id/MusicPlay"
-        android:outlineAmbientShadowColor="#CC819FED"
-        android:outlineSpotShadowColor="#CC819FED"
-        app:cardElevation="12dp"
-        tools:targetApi="p"
-        >
+        tools:targetApi="p">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/gradient_base"
-            >
+            android:background="@drawable/gradient2">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/ic_icon_start_design" />
         </androidx.constraintlayout.widget.ConstraintLayout>
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            app:srcCompat="@drawable/ic_icon_start_design" />
 
 
     </androidx.cardview.widget.CardView>
