--- a/app/src/main/res/layout/activity_mix_plus.xml
+++ b/app/src/main/res/layout/activity_mix_plus.xml
@@ -14,12 +14,10 @@
         android:id="@+id/gridLayout"
         android:layout_width="350dp"
         android:layout_height="350dp"
-        android:layout_marginTop="85dp"
-        android:layout_marginBottom="2dp"
         app:layout_constraintBottom_toTopOf="@+id/recyclerView03"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/include">
+        app:layout_constraintTop_toBottomOf="@+id/delete_area">
 
         <androidx.constraintlayout.utils.widget.ImageFilterView
             android:id="@+id/imageView_bacground"
@@ -673,9 +671,10 @@
 
         android:layout_height="60dp"
         android:layout_marginTop="8dp"
+        android:alpha="0.0"
         android:background="#80F50303"
         android:orientation="vertical"
-        android:visibility="gone"
+        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
